k8s/001-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-task
  labels:
    name: devops-task
