k8s/008-ingress-grafana.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: monitoring
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "grafana.arafinahmed.com"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  hosts:
    - "grafana.arafinahmed.com"
  gateways:
    - grafana-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana.monitoring.svc.cluster.local
            port:
              number: 80
---
